@@ -294,6 +294,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Aspirant Thetes 1"]														= "I will accompany you."
 	L["Archivist Roh-Suir 1"]													= "I found more relics we can use for our cataloged research."
 	L["Grand Artificer Romuul 1"]												= "Take me to the surface."
+	L["Marshal Dughan 1"]														= "I wish to ride the Stormwind charger, sir."
 	L["Lorewalker Cho 1"]														= "What are you waiting for? Let's go investigate!"
 	L["Lorewalker Cho 2"]														= "Go ahead and turn this thing on."
 	L["Scout Captain Elsia 1"]													= "Here are the explosives, Elsia."
